k8s_manual_Test/back_dep.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: test-backend
  namespace: test
  labels:
    role: backend
    env: test

spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
      env: test
  template:
    metadata:
      labels:
        role: backend
        env: test

    spec:
      containers:
        - name: backend
          image: my-todo-backend:mod2
          ports:
            - containerPort: 3500

          livenessProbe:                           # Health check (restart if dead)
            httpGet:
              path: /ok
              port: 3500

          readinessProbe:                          # Health check (ready if alive)
            httpGet:
              path: /ok
              port: 3500
