k8s_manual_Test/db_dep.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: test-mongo
  namespace: test
  labels:
    role: db
    env: test

spec:
  serviceName: test-mongo
  replicas: 1
  selector:
    matchLabels:
      role: db
      env: test
  template:
    metadata:
      labels:
        role: db
        env: test

    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-data
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
