k8s_manual_Test/front_dep.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: test-frontend
  namespace: test
  labels:
    role: frontend
    env: test

spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
      env: test
  template:
    metadata:
      labels:
        role: frontend
        env: test

    spec:
      containers:
        - name: frontend
          image: my-todo-frontend:mod2
          ports:
            - containerPort: 9999
