k8s_manual_Test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: test
spec:
  type: NodePort 
  selector:
    role: backend
  ports:
    - protocol: TCP
      port: 3500
      targetPort: 3500
      nodePort: 30001
      

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: test
spec:
  type: NodePort
  selector:
    role: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9999
      nodePort: 30002

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: test
spec:
  selector:
    role: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
